Docs: 설계문서 링크 정리
- 설계문서간 링크 연결

--- a/docs/2.ERD.md
+++ b/docs/2.ERD.md
@@ -1,3 +1,10 @@
+## 설계 문서
+- [1. 요구사항명세서](/docs/1.Requireements.md)
+- [2. ERD](/docs/2.ERD.md)
+- [2-1 DDL](/src/main/resources/schema.sql)
+- [3. 시퀀스 다이어그램](/docs/3.SequenceDiagram.md)
+- [4. API명세](/docs/4.APISpec.png)
+
 ```mermaid
 erDiagram
     USERS {
