--- a/docs/1.Requireements.md
+++ b/docs/1.Requireements.md
@@ -1,5 +1,12 @@
 # 🏠 E-커머스 서비스
 
+## 설계 문서
+- [1. 요구사항명세서](/docs/1.Requireements.md)
+- [2. ERD](/docs/2.ERD.md)
+- [2-1 DDL](/src/main/resources/schema.sql)
+- [3. 시퀀스 다이어그램](/docs/3.SequenceDiagram.md)
+- [4. API명세](/docs/4.APISpec.png)
+
 ## 🚨 정책
 - 인기상품은 최근 3일간 가장 많이 팔린 상품 5개 제품을 보여준다.
 - 포인트는 최대 1000만원, 최소 0원을 보유할 수 있으며, 사용전 미리 충전된 상태여야 한다.
